--- a/Projeto final 1/home.css
+++ b/Projeto final 1/home.css
@@ -3,6 +3,8 @@ body {
     background-color: #313734;
 }
 
+/*Alinhar barra de navegação de Home com localização*/
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -13,6 +15,7 @@ ul {
     margin-inline: -8px;
     font-family: Arial;
 }
+
 
 li {
     float: left;
@@ -43,7 +46,7 @@ li a:hover {
     font-size: 18px;
     margin: 5px
 }
-.img {
+.imglogo {
     height: 70px;
     width: 70px;
     margin-left: 80px;
