--- a/Projeto final 1/localizacao.css
+++ b/Projeto final 1/localizacao.css
@@ -148,7 +148,7 @@ li a:hover {
     font-size: 18px;
     margin: 5px
 }
-.img {
+.imglogo {
     height: 70px;
     width: 70px;
     margin-left: 80px;
