--- a/Projeto final 1/servicos.css
+++ b/Projeto final 1/servicos.css
@@ -2,6 +2,7 @@ body {
     background-color: #313734;
 }
 
+/*Alinhar barra de navegação de serviços com localização*/
 ul {
     list-style-type: none;
     margin: 0;
@@ -42,7 +43,7 @@ li a:hover {
     font-size: 18px;
     margin: 5px
 }
-.img {
+.imglogo {
     height: 70px;
     width: 70px;
     margin-left: 80px;
@@ -57,6 +58,12 @@ li a:hover {
 }
 
 #servicos {
-    position: relative;
+    place-items: center;
+    align-self: center;
     display: table-row;
+    margin: 20px;
+    margin-left: 20px;
+    background-color: #4D3C37;
+    border: #4D3C37 ;  
+    
 }
