--- a/Projeto final 1/servicos.css
+++ b/Projeto final 1/servicos.css
@@ -56,14 +56,25 @@ li a:hover {
     font-family: Arial;
     margin-top: 5px;
 }
-
-#servicos {
-    place-items: center;
-    align-self: center;
-    display: table-row;
-    margin: 20px;
-    margin-left: 20px;
+.container {
+    max-width: 900px;
+    margin: 20px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    background-color: #313734;
+}
+.servicos {
     background-color: #4D3C37;
-    border: #4D3C37 ;  
-    
+    border: 10px solid #4D3C37;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    color: #ffffff;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.servicos img {
+    max-width: 100%;
+    height: auto;
 }
