--- a/Projeto final 1/servicos.css
+++ b/Projeto final 1/servicos.css
@@ -48,7 +48,7 @@ li a:hover {
     width: 70px;
     margin-left: 80px;
 }
-.barrainfo {
+.header {
     background-color: #4D3C37;
     border-radius: 25px;
     padding: 5px;
@@ -66,7 +66,7 @@ li a:hover {
 }
 .servicos {
     background-color: #4D3C37;
-    border: 10px solid #4D3C37;
+    border: 10px solid #313734;
     padding: 20px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -77,4 +77,9 @@ li a:hover {
 .servicos img {
     max-width: 100%;
     height: auto;
+}
+
+a li:hover{
+    background-color: #CE814D;
+    transition: 0.5s;
 }
